examples/test/testpolicy19578.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19578
  namespace: namespace424
spec:
  podSelector:
    matchLabels:
      key28: value43
      key39: value36
      key47: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value26
          key45: value2
          key13: value0
